# yt-cli-downloader

./: .gitignore  Dragon.spec  LICENCE  README.md  audio.py  batch.py  config.py  downloader.py  file_handler.py  gui_selector.py  main.py  playlist.py  pyproject.toml  requirement.txt  resolution.py  single.py  temp_links.txt  utility.py
