[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-cli-downloader"
version = "1.0.2"
description = "A Python CLI tool to download YouTube videos and playlists with multiple options including audio-only mode and up to 4K resolution. Simply provide a YouTube video or playlist link and enjoy fast downloads. Actively being developed; user reviews are welcome."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["youtube", "cli", "downloader", "video", "audio", "playlist"]
license = {text = "MIT"}
authors = [
  { name = "Tushar Kumar" }
]
dependencies = [
  "webdriver-manager",
  "colorama",
  "pytubefix",
  "selenium",
  "ffmpeg-python"
]

[project.urls]
Homepage = "https://github.com/TusharKumar1007/yt-cli-downloader"
